infra/k8s/crwn-client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crwn-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crwn-client
  template:
    metadata:
      labels:
        app: crwn-client
    spec:
      containers:
        - name: crwn-client
          image: jaykay24/crwn-client

---
apiVersion: v1
kind: Service
metadata:
  name: crwn-client-srv
spec:
  selector:
    app: crwn-client
  ports:
    - name: crwn-client
      protocol: TCP
      port: 3000
      targetPort: 3000
