infra/k8s/ingress-serv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: crwn-clothing.com
      http:
        paths:
          - path: /payments
            backend:
              serviceName: crwn-server-srv
              servicePort: 5000
          - path: /?(.*)
            backend:
              serviceName: crwn-client-srv
              servicePort: 3000
